@@ -11,6 +11,9 @@ bodies or see it as a feature
   supposed to be compatible to C89.
 - Default build with proper integer rounding (--enable-int-quality) now.
 - Cygwin/midipix autoconf fixes (thanks to Redfoxmoon).
+- Rework library dependency handling to avoid unnecessary linking for
+  lib*123. Also add proper Libs.private to .pc files to enable static
+  usage (especially on Windows with shlwapi).
 - mpg123:
 -- Print out MPEG header info for each frame for mpg123 -vvvv.
 -- Added --no-visual to disable cursor/inverse video games explicitly.
